[package]
edition = "2021"
name = "brightness-node"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "2.0.1"

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
serde_json = "1.0"
brightness = { git = "https://github.com/c0b41/brightness.git", branch = "master" }

[profile.release]
lto = true
strip = "symbols"
